--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get next version
+        id: next_version
         uses: hennejg/github-tag-action@v4.1.jh1
         if: github.event_name != 'pull_request'
         with:
@@ -71,7 +72,7 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.next_version.outputs.new_version }}
           labels: ${{ steps.meta.outputs.labels }}
 
       # Sign the resulting Docker image digest except on PRs.
@@ -87,10 +88,6 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
 
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
       - name: Bump version and push tag
         if: github.event_name != 'pull_request'
         uses: hennejg/github-tag-action@v4.1.jh1
