--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,10 +37,13 @@ jobs:
       - name: Get next version
         id: next_version
         uses: hennejg/github-tag-action@v4.1.jh1
-        if: github.event_name != 'pull_request'
+#         if: github.event_name != 'pull_request'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dry_run: true
+          
+      - name: Checkout submodules
+        uses: textbook/git-checkout-submodule-action@master
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
