--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -36,6 +36,13 @@ jobs:
         with:
           submodules: recursive
 
+
+      - name: Configure Git
+        if: github.event_name != 'pull_request'
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
       
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.36.0
@@ -68,6 +75,31 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        if: github.event_name != 'pull_request'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+
+      - name: Install Helm
+        if: github.event_name != 'pull_request'
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.7.1
+
+      - name: Update chart version
+        if: github.event_name != 'pull_request'
+        run: |
+          sed -i "s/version: .*/version: ${{ steps.semantic_version.outputs.tag }}/g" charts/recipes-stewartplatt/Chart.yaml
+          sed -i "s/appVersion: .*/version: ${{ steps.semantic_version.outputs.tag }}/g" charts/recipes-stewartplatt/Chart.yaml
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.3.0
+        if: github.event_name != 'pull_request'
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -79,9 +111,3 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.semantic_version.outputs.tag }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.36.0
-        if: github.event_name != 'pull_request'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
