--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,6 +26,7 @@ jobs:
     permissions:
       # Contents write required for releasing to gh-pages
       contents: write
+      pages: write
       packages: write
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
