--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,8 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       # Contents write required for releasing to gh-pages
-      contents: read
-      pages: write
+      contents: write
       packages: write
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
